feat: Complete Supabase integration with comprehensive fixes
-  Integrated Supabase PostgreSQL database
-  Updated all API routes (streams, videos, titles) to use Supabase
-  Added proper field mapping between frontend camelCase and database snake_case
-  Fixed video upload functionality with customTitle/custom_title mapping
-  Added month property to video API for past-shows filtering
-  Fixed React key prop warnings in past-shows page
-  Resolved hydration errors caused by browser extensions
-  Fixed text color and readability issues in admin panel
-  Added comprehensive text selection and input styling
-  Created migration script for existing data
-  Added Supabase setup documentation
-  Implemented global hydration fix components and hooks

Database: Supabase PostgreSQL with proper schema
Frontend: Enhanced UI with better contrast and readability
API: Full CRUD operations with proper error handling

--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
-    "seed": "node scripts/seed-data.js"
+    "seed": "node scripts/seed-data.js",
+    "migrate": "node scripts/migrate-to-supabase.js"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.75.0",
+    "dotenv": "^17.2.3",
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
