--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.46.1",
+    "autoprefixer": "^10.4.21",
     "dotenv": "^16.4.5",
     "framer-motion": "^12.0.0",
     "lucide-react": "^0.468.0",
