--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "migrate": "node scripts/migrate-to-supabase.js",
     "migration:create": "node scripts/create-migration.js",
     "migration:run": "node scripts/run-migration.js",
+    "schema:run": "node scripts/run-schema.js",
     "test:db": "node scripts/test-database.js",
     "test:profile": "node scripts/test-user-profile.js",
     "setup:demo": "node scripts/setup-demo-users.js",
@@ -28,7 +29,9 @@
     "next": "15.1.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-player": "^3.3.3"
+    "react-player": "^3.3.3",
+    "xlsx": "^0.18.5",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -36,6 +39,7 @@
     "@types/node": "^22.10.2",
     "@types/react": "^18.3.17",
     "@types/react-dom": "^18.3.5",
+    "@types/xml2js": "^0.4.14",
     "eslint": "^9.17.0",
     "eslint-config-next": "15.1.6",
     "tailwindcss": "^3.4.17",
